# projects

./: .gitignore  README.md
gem5/: CMakeLists.txt  internet.txt  routine.txt  routine_improved.txt
gem5/configs/chiplet_interconnect/: common.py  run_base_topology.py  run_chiplet_system.py  run_simple_system.py
gem5/configs/simple_system/: generic_packet_processor_example.py
gem5/evaluation/: parse_results.py  run_bandwidth_tests.sh  run_latency_tests.sh
gem5/m5out/: config.dot  config.ini  config.json  stats.txt
gem5/src/: code_line.sh
gem5/src/chiplet_interconnect/: SConscript
gem5/src/chiplet_interconnect/converter/: ProtocolConverter.cc  ProtocolConverter.hh
gem5/src/chiplet_interconnect/interconnect_fabric/: SimpleChipletLink.cc  SimpleChipletLink.hh  UnifiedLinkLayer.cc  UnifiedLinkLayer.hh
gem5/src/chiplet_interconnect/protocol_endpoints/: CXLEndpoint.cc  CXLEndpoint.hh  PCIeEndpoint.cc  PCIeEndpoint.hh  UCIeEndpoint.cc  UCIeEndpoint.hh
gem5/src/protocol_converter/: GenericPacketProcessor.cc  GenericPacketProcessor.hh  GenericPacketProcessor.py  SConscript  generic_packet_processor_example.py  readme.md
gem5/src/protocol_converter/converters/: CXLConverter.hh  PCIe.md  PCIeConverter.cc  PCIeConverter.hh  PCIeConverter.py  PCIeTLP.md  ProtocolConverter.cc  ProtocolConverter.hh  ProtocolConverter.py  TLPInterface.cc  TLPInterface.hh  UCIeConverter.hh
gem5/src/protocol_converter/link_layer/: LinkLayer.cc  LinkLayer.hh  LinkLayer.py  (+4 more)
gem5/src/protocol_endpoints/: BaseEndpoint.cc  BaseEndpoint.hh  generic_packet_processor_example.py
langchain/demo/: .pdm-python  bot.py  demo.py  prompt.py  pyproject.toml  spliter.py
langchain/demo/chroma_db/: chroma.sqlite3
(+436 files in other folders)
