[project]
name = "lawyer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shulva", email = "1329068252@qq.com"},
]
dependencies = ["langchain>=0.3.25", "langchain-deepseek>=0.1.3", "bs4>=0.0.2", "chromadb>=1.0.12", "langchainhub>=0.1.21", "langserve>=0.3.1", "sse-starlette>=2.3.6", "langchain-community>=0.3.24", "sentence-transformers>=4.1.0", "langchain-huggingface>=0.2.0", "langchain-chroma>=0.2.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
